DatNV: fix bug 126388

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -56,7 +56,7 @@
             <div class="control-group" style="margin-top: 20px;">
                 <div data-bind="ntsFormLabel: {}">
                     <span class="label">#{i18n.getText('QMM020_20')}</span>
-                    <button style="margin-left: 15px;" data-bind="click: selectSalary, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
+                    <button id="H3_4" data-bind="click: selectSalary, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
                     <span style="margin-left: 20px;" data-bind="text: salaryCode"></span>
                     <span style="margin-left: 10px;" data-bind="text: salaryName"></span>
                 </div>
@@ -65,7 +65,7 @@
             <div class="control-group" style="margin-top: 15px;">
                 <div data-bind="ntsFormLabel: {}">
                     <span class="label">#{i18n.getText('QMM020_22')}</span>
-                    <button style="margin-left: 15px;" data-bind=" click: selectBonus, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
+                    <button id="H3_5" data-bind=" click: selectBonus, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
                     <span style="margin-left: 20px;" data-bind="text: bonusCode"></span>
                     <span style="margin-left: 10px;" data-bind="text: bonusName"></span>
                 </div>
