--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -100,7 +100,7 @@
                         <div class="cell valign-center">
                             <!--D2_5-->
                             <div id="D2_5" tabindex="4" data-bind="ntsComboBox: {
-                                name: '#[QMM019_111]',
+                                name: '#{i18n.getText('QMM019_111')}',
                                 options: $vm.totalObjAtrs,
                                 optionsValue: 'code',
                                 visibleItemsCount: 4,
@@ -122,7 +122,7 @@
                         <div class="cell valign-center">
                             <!--D2_8-->
                             <div id="D2_8" tabindex="5" data-bind="ntsComboBox: {
-                                name: '#[QMM019_112]',
+                                name: '#{i18n.getText('QMM019_112')}',
                                 options: $vm.calcMethods,
                                 optionsValue: 'code',
                                 visibleItemsCount: 6,
