--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/h/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/h/index.xhtml
@@ -29,7 +29,7 @@
 					<label>#{i18n.getText('CMF002_133')}</label>
 				</div>
 				<div class="nts_dataTypes">
-					<div id="H2"
+					<div id="H2" tabindex="1"
 						data-bind="ntsListBox: {
 					options: itemList,
 					optionsValue: 'code',
@@ -47,9 +47,9 @@
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button class="x-large" tabindex="4"
+				<button class="x-large" tabindex="2"
 					data-bind="click: saveData, timeClick: 1000, enable: $root.errors.isEmpty">#{i18n.getText('CMF002_135')}</button>
-				<button class="large" tabindex="5" data-bind="click: cancelSetting">#{i18n.getText('CMF002_136')}</button>
+				<button class="large" tabindex="3" data-bind="click: cancelSetting">#{i18n.getText('CMF002_136')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
