DatNV: fix bug 126559 còn thiếu title Popup

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -18,7 +18,7 @@
         <div id="contents-area" style="padding: 20px;">
             <div id="title" style="margin: 0px 0px 10px 5px">
                 <!-- K1_1 -->
-                <span id="K1_1" class="label" style="font-size: 19px;">#{i18n.getText('QMM020_66')}</span>
+                <span id="K1_1" class="label" style="font-size: 19px;margin-left: 5px;">#{i18n.getText('QMM020_66')}</span>
             </div>
             <!-- K1_2 名称 -->
             <div class=" table table-col-3">
@@ -40,7 +40,7 @@
             <table style="margin-top: 10px;">
                 <tr>
                     <td>
-                        <div id="K1_6" data-bind="ntsFormLabel: {required: true}" style="margin: 0px -20px 0px 165px;">
+                        <div id="K1_6" data-bind="ntsFormLabel: {required: false}" style="margin: 0px -20px 0px 182px;">
                             <span  class="label">#{i18n.getText('QMM020_54')}</span>
                         </div>
                     </td>
