--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -25,8 +25,9 @@
     <ui:define name="content">
         <div id="functions-area">
             <button tabindex="1" style="margin-left: 50px" class="proceed"
-                    data-bind="click:registerAmount ,enable: $root.errors.isEmpty">#{i18n.getText('QMM042_2')}</button>
-
+                    data-bind="click:registerAmount, enable: isRegistrable() &amp;&amp; $root.errors.isEmpty">
+                #{i18n.getText('QMM042_2')}
+            </button>
             <a tabindex="11" class="goout" style="margin-left: 900px"
                data-bind="ntsLinkButton: { jump: '../../041/a/index.xhtml' }">#{i18n.getText('QMM042_14')}</a>
         </div>
@@ -92,44 +93,7 @@
                             style="margin-left: 13px">#{i18n.getText('QMM042_8')}</button>
 
                 </div>
-                <div style="min-width: 600px;">
-                    <table tabindex="7" id="A4_7">
-                        <colgroup>
-                            <col width="130px"/>
-                            <col width="120px"/>
-                            <col width="160px"/>
-                            <col width="158px"/>
-
-                        </colgroup>
-                        <thead>
-                        <tr>
-                            <th class="ui-widget-header">#{i18n.getText('QMM042_10')}</th>
-                            <th class="ui-widget-header">#{i18n.getText('QMM042_11')}</th>
-                            <th class="ui-widget-header">#{i18n.getText('QMM042_12')}</th>
-                            <th class="ui-widget-header">#{i18n.getText('QMM042_13')}</th>
-
-                        </tr>
-                        </thead>
-                        <tbody data-bind="foreach: workIndividualPricesDisplay">
-                        <tr>
-                            <td data-bind="text: employeeCode()"/>
-                            <td data-bind="text: businessName()"/>
-                            <td data-bind="text: period"/>
-                            <td>
-                                <input id="A4_15" class="A4_15_input" tabindex="8" style="width: 120px" data-bind="ntsNumberEditor: {
-                                        constraint:'SalaryUnitPrice',
-                                        value: amountOfMoney,
-                                        name:'#[QMM042_13]',
-                                        required:true,
-                                        option: {
-                                            grouplength: 3,
-                                            decimallength:2,
-                                            currencyformat: 'JPY'}}"/>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <table id="grid" tabindex="7"/>
             </div>
 
         </div>
