--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/qmm042.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/qmm042.a.style.css
@@ -2,13 +2,12 @@
     margin-top: 15px;
 }
 
-
 .margin-left-item{
     margin-left: 30px;
 }
 
 .margin-top{
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .caret-background.caret-bottom:after{
@@ -24,19 +23,16 @@
 
 }
 
-.ci_scroll_header {
-    width: 17px !important;
+#grid .mgrid-header td.left-align {
+    text-align: left;
 }
 
-.ci_scroll_body {
-    padding-right: 0px !important;
+#grid .mgrid-free td.currency-symbol {
+    text-align: right;
 }
 
-.edge_scroll_body {
-    padding-right: 0px !important;
+#grid .mgrid-free td.currency-symbol:before {
+    float: left;
+    padding-right: 0;
+    padding-left: 4px;
 }
-
-.edge_scroll_header {
-    width: 16px !important;
-}
-
