MinhVV CMM008 CMM001 KMK009

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
@@ -26,6 +26,7 @@
 					<button id="btnSave"
 						class="button proceed separate-button fix-button"
 						data-bind="click: save, enable: enableSave" tabindex="1">#{i18n.getText('KMK009_1')}</button>
+					<button  tabindex="5" id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 				</div>
 			</div>
 
