--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -48,7 +48,7 @@
         </div>
         <div class="fixed-flex-layout-right" style="margin-top: 20px;">
             <span id = "H3_1" style="margin-bottom: 15px;">#{i18n.getText('QMM020_46')}</span>
-            <div class="control-group flex valign-center" style="min-width: 500px;padding-top: 15px;margin-left: 20px">
+            <div id="text_Salary" class="control-group flex valign-center">
                 <pre tabindex="-1">#{i18n.getText('QMM020_18')}</pre>
                 <span id="H3_3" style="padding-left: 30px">#{i18n.getText('QMM020_19')}</span>
             </div>
