DatNV: fix bug 126522 cho các màn B, C, D, G, H, E

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -19,6 +19,9 @@
         </div>
         <div style="margin-top: 30px;" class="contents-area fixed-flex-layout">
                 <div class="fixed-flex-layout-left" style="margin-left: 25px">
+                    <div >
+                        <i id="img-calendar" class="image image-calendar"/>
+                    </div>
                         <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                                 <div>
                                         <button id="B1_3" tabindex="1" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">#{i18n.getText('QMM020_13')}</button>
