--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/qmm020.c.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/qmm020.c.style.css
@@ -46,3 +46,12 @@
 #grid2_container tr th:NTH-CHILD(6) {
     border-right: none;
 }
+
+#img-calendar{
+    position: absolute;
+    z-index: 1;
+    margin: -14px -11px;
+}
+#C1_5_container {
+    margin: 15px 0px 0px 0px !important;
+}
