--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/qmm020.g.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/qmm020.g.style.css
@@ -35,3 +35,12 @@
 #title_G {
     font-size: 25px !important;
 }
+
+#img-calendar{
+    position: absolute;
+    z-index: 1;
+    margin: -14px -11px;
+}
+#G1_5_container {
+    margin: 15px 0px 0px 0px !important;
+}
