--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -24,6 +24,9 @@
 
         </div>-->
         <div class="fixed-flex-layout-left" style="margin-left: 90px;margin-top: 20px; float: left;">
+            <div >
+                <i id="img-calendar" class="image image-calendar"/>
+            </div>
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
                     <button id="H2_3" data-bind="click: openJScreen, enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
