--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -46,7 +46,7 @@
                 </thead>
                 <tbody>
                 <tr data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
-                    <td class="ui-widget-header">#{i18n.getText('QMM016_29')}</td>
+                    <th class="ui-widget-header">#{i18n.getText('QMM016_29')}</th>
                     <td data-bind="if: masterNumericClassification() == 1">
                         <div data-bind="text: elementName"></div>
                     </td>
@@ -69,7 +69,7 @@
                     </td>
                 </tr>
                 <tr data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
-                    <td class="ui-widget-header">#{i18n.getText('QMM016_40')}</td>
+                    <th class="ui-widget-header">#{i18n.getText('QMM016_40')}</th>
                     <td data-bind="if: masterNumericClassification() == 1">
                         <div data-bind="text: elementName"></div>
                     </td>
@@ -104,51 +104,55 @@
         <button style="margin-left: 30px;" id="B4_2">#{i18n.getText('QMM016_37')}</button>
     </div>
     <hr></hr>
-    <div id="C5" class="tab-row" style="margin-top: -15px;" data-bind="if: $vm.wageTableContent().payment().length >0">
-        <img style="position: relative; top: 26px;" src="../resource/QMM016_6.png"></img>
-        <img style="position: relative;top: 50px; left: 520px;" src="../resource/QMM016_7.png"></img>
-        <div>
-            <table id="wage-table-2d">
-                <thead>
-	                <tr>
-	                    <th style="height: 32px; width: 150px; border: none"></th>
-	                    <th class="ui-widget-header" style="height: 32px; border: 1px solid #CCC; padding: 0 2px;">
-	                        <div data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
-	                            <div data-bind="text: elementName"></div>
-	                        </div>
-	                    </th>
-	                </tr>
-                </thead>
-                <tbody>
-                	<tr>
-                		<th class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;">
-	                        <div data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
-	                            <div data-bind="text: elementName"></div>
-	                        </div>
-	                    </th>
-                		<td>
-                			<div style="max-width: 471px; overflow: auto;"  id="wage-table-right-header">
-                				<table>
-                					<tbody>
-   						                <tr>
-	                                        <com:ko bind="$vm.listSecondDimension" tag="foreach">
-						                    	<td class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;"
-						                    		data-bind="text: name"></td>
-						                    </com:ko>
-					                    </tr>
-                					</tbody>
-                				</table>
-                			</div>
-                		</td>
-                	</tr>
-                	<tr>
-                		<td>
-                			<div style="height: 364px; overflow: auto; margin-top: -13px;" id="wage-table-left">
-                				<table>
-                					<tbody data-bind="foreach: $vm.wageTableContent().payment">
-						                <tr>
-						                    <th style="height: 32px; width: 150px; border: 1px solid #CCC;" class="ui-widget-header">
-							                    <div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
+    <div id="C5" class="tab-row ui-iggrid" data-bind="if: $vm.wageTableContent().payment().length >0">
+    	<table id="wage-table-content-layout">
+			<thead>
+				<tr>
+					<td rowspan="2" style="border: none;"><img style="" src="../resource/QMM016_6.png"></img></td>
+					<td style="height: 32px; border: none;"></td>
+					<td style="border: none;"></td>
+				</tr>
+				<tr>
+					<th class="ui-widget-header">
+						<div data-bind="with: selectedWageTable().elementInformation().twoDimensionElement" style="height: 32px">
+                            <div data-bind="text: elementName"></div>
+                        </div>
+					</th>
+					<td rowspan="2" style="border: none;"><img style="" src="../resource/QMM016_7.png"></img></td>
+				</tr>
+				<tr>
+					<th class="ui-widget-header" style="border: none;">
+						<div data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
+                            <div data-bind="text: elementName"></div>
+                        </div>
+					</th>
+					<th style="border: none;">
+						<div id="elem2-wrapper" style="width: 500px; overflow-x: hidden; overflow-y: scroll">
+							<table id="elem2-table">
+								<tbody>
+					                <tr>
+                                        <com:ko bind="$vm.listSecondDimension" tag="foreach">
+					                    	<th class="ui-widget-header">
+					                    		<div style="height: 32px; width: 150px;" data-bind="text: name"></div>
+				                    		</th>
+					                    </com:ko>
+				                    </tr>
+               					</tbody>
+							</table>
+						</div>
+					</th>
+				</tr>
+			</thead>
+			<tbody>					
+				<tr>
+					<td style="border: none;">
+						<div id="elem1-wrapper" style="height: 347px; overflow-y: hidden; overflow-x: scroll">
+							<table id="elem1-table">
+								<tbody data-bind="foreach: $vm.wageTableContent().payment">
+					                <tr>
+					                    <th class="ui-widget-header">
+					                    	<div style="height: 32px; width: 150px;">
+					                    		<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
 							                		<span data-bind="text: masterName"></span>
 							                	</div>
 							                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
@@ -156,36 +160,39 @@
 								                    <span>#{i18n.getText('QMM016_31')}</span>
 								                    <span data-bind="text: frameUpperLimit"></span>
 							                    </div>
-						                    </th>
-						                </tr>
-					                </tbody>
-                				</table>
-                			</div>
-                		</td>
-                		<td>
-                			<div style="height: 381px; max-width: 471px; overflow: auto;"  id="wage-table-right">
-                				<table>
-                					<tbody data-bind="foreach: $vm.wageTableContent().payment">
-						                <tr>
-						                    <com:ko bind="listSecondDms" tag="foreach">
-									            <td style="height: 32px; width: 150px; border: 1px solid #CCC; vertical-align: bottom;">
-						 				            <input data-bind="ntsNumberEditor: {
- 						  								option: { grouplength: 3, width: '120px' }, 
- 						   								name: '#[QMM016_39]', 
- 						   								value: paymentAmount, 
- 						   								constraint: 'WageTablePaymentAmount', 
- 						   								required: true}" />  
-									            </td>
-									        </com:ko>
-						                </tr>
-					                </tbody>
-                				</table>
-                			</div>
-                		</td>
-                	</tr>
-                </tbody>
-            </table>
-        </div>
+					                    	</div>
+					                    </th>
+					                </tr>
+				                </tbody>
+							</table>
+						</div>
+					</td>
+					<td style="border: none;">
+						<div id="content-wrapper" style="width: 500px; height: 347px; overflow: auto;">
+							<table id="content-table">
+								<tbody data-bind="foreach: $vm.wageTableContent().payment">
+					                <tr>
+					                    <com:ko bind="listSecondDms" tag="foreach">
+								            <td style="border: 1px solid #CCC; vertical-align: middle;">
+					 				            <div style="height: 32px; width: 150px; text-align: center;">
+					 				            	<input data-bind="ntsNumberEditor: {
+						  								option: { grouplength: 3, width: '120px' }, 
+						   								name: '#[QMM016_39]', 
+						   								value: paymentAmount, 
+						   								constraint: 'WageTablePaymentAmount', 
+						   								required: true}" /> 
+					 				            </div>
+								            </td>
+								        </com:ko>
+					                </tr>
+				                </tbody>
+							</table>
+						</div>
+					</td>
+					<td style="border: none;"></td>
+				</tr>
+			</tbody>
+		</table>
     </div>
 </div>
 </ui:composition>
