--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
@@ -1,3 +1,7 @@
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:com="http://xmlns.jcp.org/jsf/component"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <div>
     <div class="flex valign-center tab-row">
         <div style="width: 110px;"
@@ -42,69 +46,57 @@
                 </thead>
                 <tbody>
                 <tr data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
-                    <td class="ui-widget-header">#{i18n.getText('QMM016_29')}</td>
+                    <th class="ui-widget-header">#{i18n.getText('QMM016_29')}</th>
                     <td>
-                        <div data-bind="text: fixedElement, visible: fixedElement()"></div>
-                        <div data-bind="text: optionalAdditionalElement, visible: optionalAdditionalElement()"></div>
+                        <div data-bind="text: elementName"></div>
                     </td>
                     <td style="text-align: center;">
                         <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_8"
                                    data-bind="ntsNumberEditor: {constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
                             <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_10"
                                    data-bind="ntsNumberEditor: {constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
                         </div>
                     </td>
                     <td style="text-align: center;">
                         <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_11"
                                    data-bind="ntsNumberEditor: {constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
                         </div>
                     </td>
                 </tr>
                 <tr data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
-                    <td class="ui-widget-header">#{i18n.getText('QMM016_40')}</td>
+                    <th class="ui-widget-header">#{i18n.getText('QMM016_40')}</th>
                     <td>
-                        <div data-bind="text: fixedElement, visible: fixedElement()"></div>
-                        <div data-bind="text: optionalAdditionalElement, visible: optionalAdditionalElement()"></div>
+                        <div data-bind="text: elementName"></div>
                     </td>
                     <td style="text-align: center;">
                         <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_15"
                                    data-bind="ntsNumberEditor: {constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
                             <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_17"
                                    data-bind="ntsNumberEditor: {constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
                         </div>
                     </td>
                     <td style="text-align: center;">
                         <div data-bind="with: $vm.elementRangeSetting().secondElementRange">
-                            <input style="width: 20px;"
+                            <input style="width: 20px;" id="F2_18"
                                    data-bind="ntsNumberEditor: {constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
                         </div>
                     </td>
                 </tr>
                 <tr data-bind="with: selectedWageTable().elementInformation().threeDimensionElement">
-                    <td class="ui-widget-header">#{i18n.getText('QMM016_44')}</td>
+                    <th class="ui-widget-header">#{i18n.getText('QMM016_44')}</th>
                     <td>
-                        <div data-bind="text: fixedElement, visible: fixedElement()"></div>
-                        <div data-bind="text: optionalAdditionalElement, visible: optionalAdditionalElement()"></div>
+                        #{i18n.getText('QMM016_53')}
                     </td>
                     <td style="text-align: center;">
-                        <div data-bind="with: $vm.elementRangeSetting().thirdElementRange">
-                            <input style="width: 20px;"
-                                   data-bind="ntsNumberEditor: {constraint: 'RangeLowerLimit', value: rangeLowerLimit, name: '#[QMM016_30]'}"/>
-                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-                            <input style="width: 20px;"
-                                   data-bind="ntsNumberEditor: {constraint: 'RangeUpperLimit', value: rangeUpperLimit, name: '#[QMM016_32]'}"/>
-                        </div>
+                        #{i18n.getText('QMM016_34')}
                     </td>
                     <td style="text-align: center;">
-                        <div data-bind="with: $vm.elementRangeSetting().thirdElementRange">
-                            <input style="width: 20px;"
-                                   data-bind="ntsNumberEditor: {constraint: 'StepIncrement', value: stepIncrement, name: '#[QMM016_33]'}"/>
-                        </div>
+                        #{i18n.getText('QMM016_34')}
                     </td>
                 </tr>
                 </tbody>
@@ -112,7 +104,7 @@
         </div>
     </div>
     <div class="tab-row" style="margin-left: 75px; width: 500px; text-align: center;">
-        <button data-bind="click: $vm.createThreeDimensionWageTable" style="width: 400px;"
+        <button data-bind="click: $vm.createWorkLevelWageTable" style="width: 400px;"
                 class="caret-bottom large-caret">#{i18n.getText('QMM016_35')}</button>
     </div>
     <div class="tab-row" style="margin-top: 40px;">
@@ -120,145 +112,117 @@
         <button style="margin-left: 30px;" id="B4_2">#{i18n.getText('QMM016_37')}</button>
     </div>
     <hr></hr>
-    <div class="tab-row" data-bind="if: $vm.wageTableContent().payment().length >0">
-        <img style="width: 96px" src="../resource/QMM016_6.png"></img>
-        <div style="display: inline-block;">
-            <table class = "fixed-table-top">
-                <colgroup>
-                    <col width="270px"/>
-                </colgroup>
-                <thead>
-                <tr>
-                    <th colspan="5" class="ui-widget-header">
-                        <div style="width: 100px; display: inline-block; "
-                             data-bind="with: selectedWageTable().elementInformation().threeDimensionElement">
-                            <div style = "display: inline-block" data-bind="text: fixedElement"></div>
-                            <div style = "display: inline-block" data-bind="text: optionalAdditionalElement"></div>
-                        </div>
-                        <div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
-                        options: $vm.fakeCombobox,
-                        optionsValue: 'value',
-                        width: '120px',
-                        visibleItemsCount: 5,
-                        value: $vm.fakeSelectedValue,
-                        optionsText: 'name',
-                        enable: true,
-                        columns: [
-                            { prop: 'fixed_length', length: 4 },
-                            { prop: 'name', length: 10 },
-                        ]}"></div>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-        <img src="../resource/QMM016_8.png"></img>
-    </div>
-    <div style = "margin-top: -7px;" data-bind="if: $vm.wageTableContent().payment().length >0">
-        <div class = "custom-fixed-table-body">
-            <table class = "custom-fixed-table fixed-table-body">
-                <colgroup>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                </colgroup>
-                <thead>
-                <tr>
-                    <th></th>
-                    <th colspan="5" class="ui-widget-header">
-                        <div data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
-                            <div style = "display: inline-block" data-bind="text: fixedElement"></div>
-                            <div style = "display: inline-block" data-bind="text: optionalAdditionalElement"></div>
-                        </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th class="ui-widget-header">
-                        <div data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
-                            <div style = "display: inline-block" data-bind="text: fixedElement"></div>
-                            <div style = "display: inline-block" data-bind="text: optionalAdditionalElement"></div>
-                        </div>
-                    </th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                </tbody>
-            </table>
-            <img src="../resource/QMM016_7.png"></img>
-        </div>
+    <div class="tab-row ui-iggrid" data-bind="if: $vm.wageTableContent().payment().length > 0">
+        <table>
+			<thead>
+				<tr>
+					<td rowspan="2"><img src="../resource/QMM016_6.png"></img></td>
+					<td>
+						<div style="display: inline-block; background-color: #CFF1A5; border: 1px solid #CCC;">
+							<div style="width: 150px; display: inline-block;">
+		                        <div>#{i18n.getText('QMM016_53')}</div>
+		                    </div>
+		                    <div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
+	                     		options: $vm.listThirdDimension,
+			                     optionsValue: 'value',
+			                     width: '150px',
+			                     visibleItemsCount: 5,
+			                     value: $vm.fakeSelectedValue,
+			                     optionsText: 'name',
+			                     selectFirstIfNull: true,
+			                     enable: true,
+			                     columns: [
+			                         { prop: 'fixed_length', length: 4 },
+			                         { prop: 'name', length: 10 },
+			                     ]}"></div>
+						</div>
+						<img src="../resource/QMM016_8.png"></img>
+	                </td>
+					<td></td>
+				</tr>
+				<tr>
+					<th class="ui-widget-header">
+						<div data-bind="with: $vm.selectedWageTable().elementInformation().twoDimensionElement" style="height: 32px">
+	                        <div data-bind="text: elementName"></div>
+	                    </div>
+	                </th>
+					<td rowspan="2"><img src="../resource/QMM016_7.png"></img></td>
+				</tr>
+				<tr>
+					<th class="ui-widget-header">
+						<div data-bind="with: $vm.selectedWageTable().elementInformation().oneDimensionElement">
+		                    <div data-bind="text: elementName"></div>
+		                </div>
+					</th>
+					<th>
+						<div id="elem2-wrapper" style="max-width: 500px; overflow: auto;">
+							<table id="elem2-table">
+								<tbody>
+					                <tr>
+	                                    <com:ko bind="$vm.listSecondDimension" tag="foreach">
+				                    		<td class="ui-widget-header">
+				                    			<div style="height: 32px; width: 150px;" data-bind="text: name"></div>
+			                    			</td>
+				                    	</com:ko>
+			                    	</tr>
+	           					</tbody>
+							</table>
+						</div>
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				
+				<tr>
+					<td>
+						<div id="elem1-wrapper" style="max-height: 300px; overflow: auto;">
+							<table id="elem1-table">
+								<tbody data-bind="foreach: $vm.wageTableContent2dData">
+					                <tr>
+					                    <th class="ui-widget-header">
+						                    <div style="height: 32px; width: 150px;">
+						                    	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
+							                		<span data-bind="text: masterName"></span>
+							                	</div>
+							                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
+								                    <span data-bind="text: frameLowerLimit"></span>
+								                    <span>#{i18n.getText('QMM016_31')}</span>
+								                    <span data-bind="text: frameUpperLimit"></span>
+							                    </div>
+						                    </div>
+					                    </th>
+					                </tr>
+				                </tbody>
+							</table>
+							<div style="height: 17px"></div>
+						</div>
+					</td>
+					<td>
+						<div id="content-wrapper" style="max-width: 500px; max-height: 300px; overflow: auto;">
+							<table id="content-table">
+								<tbody data-bind="foreach: $vm.wageTableContent2dData">
+					                <tr>
+					                    <com:ko bind="listSecondDms" tag="foreach">
+								            <td style="border: 1px solid #CCC; vertical-align: middle;">
+					 				            <div style="height: 32px; width: 150px; text-align: center;">
+					 				            	<input data-bind="ntsNumberEditor: {
+						  								option: { grouplength: 3, width: '120px' }, 
+						   								name: '#[QMM016_39]', 
+						   								value: paymentAmount, 
+						   								constraint: 'WageTablePaymentAmount', 
+						   								required: true}" /> 
+					 				            </div>
+								            </td>
+								        </com:ko>
+					                </tr>
+				                </tbody>
+							</table>
+						</div>
+					</td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
     </div>
 </div>
+</ui:composition>
