--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/y/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/y/index.xhtml
@@ -94,7 +94,7 @@
 						name:'#{i18n.getText('CMF002_354')}',
 						rows: 5,
 						options: externalOutLog,
-						optionsValue: 'code',
+						primaryKey: 'no',
 						columns: columnsExternalOutLog,
 						multiple: false,
 						value: currentCode
