--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/qmm020.c.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/qmm020.c.style.css
@@ -52,6 +52,7 @@
     z-index: 1;
     margin: -14px -11px;
 }
-#C1_5_container {
-    margin: 15px 0px 0px 0px !important;
+
+#grid2_virtualContainer {
+    border: 1px solid #AAB7B8 !important;
 }
