DatNV: fix bug 126432

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -1,6 +1,6 @@
 <div>
     <div class="sidebar-content-header" style = "min-width: 1000px;">
-            <span class="title">#{i18n.getText('QMM020_9')}</span>
+            <span class="title" style="margin-left: 4px;font-size: 25px;">#{i18n.getText('QMM020_9')}</span>
             <button id="A1_1" tabindex="1" class="proceed" style="margin-left: 80px"
                     data-bind="click: registerPosition, enable: !enableRegis() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
