--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -55,7 +55,7 @@
                 <pre tabindex="-1">#{i18n.getText('QMM020_18')}</pre>
                 <span id="H3_3" style="padding-left: 30px">#{i18n.getText('QMM020_19')}</span>
             </div>
-            <hr></hr>
+            <hr style="margin-bottom: 40px;"></hr>
             <div class="control-group" style="margin-top: 20px;">
                 <div data-bind="ntsFormLabel: {}">
                     <span class="label">#{i18n.getText('QMM020_20')}</span>
